--- a/web/css/pushy.css
+++ b/web/css/pushy.css
@@ -18,7 +18,7 @@
   background: rgb(21,21,21);
   overflow:  auto;
   /* overflow:-moz-hidden-unscrollable; */
-  ms-overflow-style: none; IE 11 */
+  ms-overflow-style: none;
   visibility: hidden;
   -webkit-overflow-scrolling: touch;
   /* enables momentum scrolling in iOS overflow elements */
@@ -29,9 +29,9 @@
   list-style-type: none;
   padding:0;
 }
-.pushy::-webkit-scrollbar{
-  display: none;
-}
+/*.pushy::-webkit-scrollbar{*/
+  /*display: none;*/
+/*}*/
 .pushy a {
   display: block;
   color: #b3b3b1;
