Displaying gallery list fix

--- a/app/Resources/views/Subpages/gallery.html.twig
+++ b/app/Resources/views/Subpages/gallery.html.twig
@@ -21,7 +21,7 @@
 
         <h4 class="header-title">Dostępne galerie <span class="head-line"></span></h4>
 
-        <main class="gallery-wrapper clearfix">
+        <main class="galleries-wrapper clearfix">
         {% for gallery in galleryRepo %}
         <!-- Rysowanie galerii na stronie -->
 
