--- a/app/Resources/views/Subpages/photos.html.twig
+++ b/app/Resources/views/Subpages/photos.html.twig
@@ -13,7 +13,7 @@
 
     {% else %}
         <h4 class="border_animation header-title">Zdjęcia w galerii: {{ gallery.name }}<span class="head-line"></span></h4>
-            <div class="form-group">
+            <div class="displaying-switch">
                 <label for="selection"> Wybór sposobu wyświetlania zdjęć: </label>
                 <select id="selection">
                     <option>Jedno pod drugim</option>
@@ -24,14 +24,14 @@
             <main class="gallery-wrapper center-block clearfix" data-chocolat-title="{{ gallery.name }}">
 
                 {% for photo in photos %}
-                    {#col-lg-3 col-md-4 col-sm-6#}
                         <div class="col-xs-12">
                             <div class="single-photo">
+
                                 <a class="chocolat-image" href="{{ asset('uploads/images/galleries/'~ photo.imageName) }}" title="Data dodania: {{ photo.createdAt|date('d.m.Y, H:m')  }}">
                                     <img class="img-responsive" src="{{ asset('uploads/images/galleries/'~ photo.imageName) }}" alt="{{ photo.slug }}" >
                                 </a>
 
-                                <div class="desc">Dodano: {{ photo.createdAt|date('d.m.Y, H:m') }}</div>
+                                <div class="desc">{{ loop.index }} z {{ loop.length }} Dodano: {{ photo.createdAt|date('d.m.Y, H:m') }}</div>
 
                             </div>
                         </div>
@@ -74,7 +74,7 @@
 
             if (selectionBoxText=="Jedno pod drugim") {
                 photosContainer.addClass("center-block");
-                photosContainer.css({"width":"25%"});
+                photosContainer.css({"width":"35%"});
                 singlePhoto.removeClass("col-lg-3", "col-md-4", "col-sm-6");
             }
 
